# openocd

./: .gitignore  CMakeLists.txt  cmake-variants.TEMPLATE.json
cmake/toolchainfiles/: toolchain_windows_32.cmake
jimtcl-cmake/: CMakeLists.txt
src/: CMakeLists.txt  openocd.c
src/flash/: CMakeLists.txt
src/flash/nand/: CMakeLists.txt
src/flash/nor/: CMakeLists.txt
src/helper/: CMakeLists.txt
src/jtag/: CMakeLists.txt
